<resources>
    <string name="app_name">My Health Guide</string>
    <string name="OK">Ok</string>
    <string name="Wrong">Wrong</string>
    <string name="title_activity_add_medication">addMedication</string>
    <string name="share">Share</string>
    <string name="Add_favorite">Add To Favorite</string>
    <string name="action_add_favourite">Add To Favourite List</string>
    <string name="action_play_next">Share</string>
    <string name="title_activity_inner_allowedance" translatable="false">InnerAllowedanceActivity</string>
    <string name="Disease">Disease</string>
    <string name="Diabietes">Diabietes</string>
    <string name="Missing">Missing field</string>
    <string name="You_have_to_choose_a_photo">You have to choose a photo</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="Add_Medication">Add Medication</string>
    <string name="Take_Photo">Take Photo</string>
    <string name="Choose_from_Library">Choose from Library</string>
    <string name="Cancel">Cancel</string>
    <string name="Add_Photo">Add Photo!</string>
    <string name="choose_one_day">you have to choose at least one day!</string>
    <string name="Added_Successfully">Added Successfully!</string>
    <string name="unfavoriteMsh">Are you sure you want to unfavourite this disease</string>
    <string name="allowedFood">allowedFood</string>
    <string name="name">Name</string>
    <string name="notAllowedFood">notAllowedFood</string>
    <string name="Favourite_list">Favourite list</string>
    <string name="registered_email_address">Please enter your registered email address!</string>
    <string name="reset_pass">Rest password email has been sent!</string>
    <string name="error_reset_pass">Error in sending password reset email!</string>
    <string name="added">Added to your favourite !</string>
    <string name="allready_in_favorite">This Disease is already in your favourite list..</string>
    <string name="share_using">Share using:</string>
    <string name="Allowed_Food">Allowed Food</string>
    <string name="Forbidden_Food">Forbidden Food</string>
    <string name="disease">disease:</string>
    <string name="allowed_Food">Allowed food:</string>
    <string name="Not_allowed_food">Not allowed food:</string>
    <string name="Please_wait">Please wait...</string>
    <string name="language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="invalidEmailMsg">Invalid email or password, please check and try again</string>
    <string name="invalidEmailPassMsg">Invalid email or password, please check and try again</string>
    <string name="MissFields">Missing fields, try Again please..</string>
    <string name="verifyEmailMsg">Please verify your email address</string>
    <string name="updateMsg">Are you sure you want to update this medication?</string>
    <string name="sucessUpdate">Updated successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteMsg">Are you sure you want to delete this medication?</string>
    <string name="dayWarning">you have to choose at least one day!</string>
    <string name="successDelete">Deleted successfully</string>
    <string name="Medication_information">Medication information</string>
    <string name="Nothing">Nothing</string>
    <string name="Changelanguage">Change Language</string>
    <string name="Change_Password">Change Password</string>
    <string name="Dose">Dose per day:</string>
    <string name="one">1</string>
    <string name="choose_time">Select initial time:</string>
    <string name="remind_me">Remind me on:</string>
    <string name="Special_Instruction">Special Instruction (optional)</string>
    <string name="loginTrouple">Trouble logging in?</string>
    <string name="enterEmail">Enter your email address and we\'ll send you a link to get back into your account.</string>
    <string name="emailAdd">Email Address</string>
    <string name="resetPass">Reset Password</string>
    <string name="backLogin">Back To Log In</string>
    <string name="clickBrowse">Click to Browse Useful Tools</string>
    <string name="emailEnter">Enter your email address</string>
    <string name="enterPass">Enter your password</string>
    <string name="Login">Login</string>
    <string name="forgetPass">Forgot Password?</string>
    <string name="createAcc">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign-in</string>
    <string name="add">Add</string>
    <string name="passwordNew">PASSWORD</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="change">Change</string>
    <string name="Profile">Profile</string>
    <string name="Authentication_Failed">Authentication Failed</string>
    <string name="pass_changed_successfully">Your password has been changed successfully</string>
    <string name="Something_went_wrong">Something went wrong please try again</string>
    <string name="logoutMsg">Are you sure you want to logout?</string>
    <string name="passMin">Password should be more than 6 characters, please try again</string>
    <string name="search">Search...</string>
    <string name="leave_page">Are you sure you want to leave this page</string>
    <string name="email_Exist">This email is already exist</string>
    <string name="MissingField">Missing field</string>
    <string name="emailFormat">Invalid email format</string>
    <string name="password6Char">Password should be more than 6 characters, please try again</string>
    <string name="matchPass">Passwords do not match,, please check then try again</string>
    <string name="EmailVer">Verification email has been sent!</string>
    <string name="EmailVerNot">Verification email has\'nt been sent!</string>
</resources>
