<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:autoMirrored="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_home"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#FFF" />

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#438A8787">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="600dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:id="@+id/profile_layout"
                    android:layout_width="322dp"
                    android:layout_height="600dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="50dp"

                    android:layout_marginEnd="40dp"
                    android:background="@drawable/profile_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="24dp">

                    <ImageView
                        android:layout_marginTop="40dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:layout_marginStart="140dp"

                        android:src="@drawable/profileme" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="268dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_email"
                            android:layout_width="268dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="268dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_name"
                            android:layout_width="268dp"
                            android:layout_height="52dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/Email"
                            android:inputType="textEmailAddress"
                            android:text="" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="268dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_password"
                            android:layout_width="268dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:ems="10"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:text="" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/change"
                        android:layout_width="171dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/Change_Password"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/languageBtn"
                        android:layout_width="171dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/Changelanguage"
                        android:textColor="#FFFFFF" />
                    <LinearLayout
                        android:layout_width="308dp"
                        android:layout_height="60dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/logoutBtn"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="140dp"
                            android:layout_marginTop="10dp"
                            android:clickable="true"
                            android:src="@drawable/door" />
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>